updated layout for html, css, javascript, and added image

--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>My Website</title>
+    <title>Brian's Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <script src="script.js"></script> 
+    <div class="divOne">
+        <img style="float: center; margin: 0px -200px -25px 0px;" src="bruno-fernandes-slide.png" alt="bruno fernandes slide" height="250" width="200" padding="0">
+        <h1>Brian's Website</h1>
+    </div>
+    <div class="topNav">
+        <a href="#home">Home</a>
+        <a href="#">My Work</a>
+        <a href="#">About</a>
+    </div>
+</br>
+    <div class="divOne">
+        <iframe src="https://giphy.com/embed/BBC1izoOkjXkjkohMY" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+    </div>
+    <div class="divBall">
+        <script src="script.js"></script>
+    </div>
+    <div class="divTwo">
+        <p>test</p>
+    </div>
   </body>
 </html> 
