added some images

--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
     </div>
     <div class="topNav">
         <a href="#home">Home</a>
-        <a href="#">My Work</a>
+        <a href="https://github.com/bsmitty815">My Work</a>
         <a href="#">About</a>
     </div>
 </br>
     <div class="divOne">
+        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code. This is my dog <a href="#">Mylie<img src="mylie.jpg"></a>.</p>
         <iframe src="https://giphy.com/embed/BBC1izoOkjXkjkohMY" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     </div>
-    <div class="divBall">
-        <script src="script.js"></script>
+
+    <div id="box">
+
+    
+        <p><button onclick="moveRight();">Click Me To Slide</button></p>
+ 
+        <div id="bruno"></div>
     </div>
-    <div class="divTwo">
-        <p>test</p>
-    </div>
+    <div id="webLogos"></div>
+    <script src="script.js"></script>
   </body>
 </html> 
