updated images, navigation bar, and width of backrground

--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>Brian's Website</title>
+    <title>Brian's Smith</title>
   </head>
   <body>
-    <div class="divOne">
-        <img style="float: center; margin: 0px -200px -25px 0px;" src="bruno-fernandes-slide.png" alt="bruno fernandes slide" height="250" width="200" padding="0">
-        <h1>Brian's Website</h1>
+    <div class="divThree">
+        <img style="float: center; margin: 0px -200px -50px 0px;" src="bear.png" alt="bear" padding="0" >
+        <div class="divThree">
+        <h1 >Brian's Website</h1>
+      </div>
     </div>
-    <div class="topNav">
-        <a href="#home">Home</a>
-        <a href="https://github.com/bsmitty815">My Work</a>
-        <a href="#">About</a>
+    <div class="topNav"> 
+        <a href="https://www.linkedin.com/in/nimclick/">LinkedIn</a>
+        <a href="https://github.com/bsmitty815">GitHub</a>
     </div>
 </br>
     <div class="divOne">
-        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code. This is my dog <a href="#">Mylie<img src="mylie.jpg"></a>.</p>
+        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code. This is my dog <a href="#"></a><strong>Mylie</strong><img src="mylie.jpg"></a>.</p>
         <iframe src="https://giphy.com/embed/BBC1izoOkjXkjkohMY" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     </div>
 
     <div id="box">
 
     
-        <p><button onclick="moveRight();">Click Me To Slide</button></p>
+        <p><button onclick="moveRight();"><strong>Click Me To Slide</strong></button></p>
  
         <div id="bruno"></div>
     </div>
