updated css file, html, file, and image

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </div>
 </br>
     <div class="divOne">
-        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code. This is my dog <a href="#"></a><strong>Mylie</strong><img src="mylie.jpg"></a>.</p>
+        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code. This is my dog <a href="#"><strong>Mylie</strong><img src="mylie.jpg"></a>.</p>
         <iframe src="https://giphy.com/embed/BBC1izoOkjXkjkohMY" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     </div>
 
     <div id="box">
 
     
-        <p><button onclick="moveRight();"><strong>Click Me To Slide</strong></button></p>
+        <p><button class="medium-btn" onclick="moveRight();"><strong>Click Me To Slide</strong></button></p>
  
         <div id="bruno"></div>
     </div>
