--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>Brian's Smith</title>
+    <title>Brian Smith</title>
   </head>
   <body>
     <div class="divThree">
         <img style="float: center; margin: 0px -200px -50px 0px;" src="bear.png" alt="bear" padding="0" >
         <div class="divThree">
-        <h1>Brian's Website</h1>
+        <h1>Brian Smith</h1>
       </div>
     </div>    
     <div class="topNav"> 
@@ -17,7 +17,9 @@
     </div>
 </br>
     <div class="divOne">
-        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code. This is my dog <a href="#"><strong>Mylie</strong><img src="mylie.jpg"></a>.</p>
+        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code with the help of The Flatiron School, SoloLearn, and some youtube videos I have made this site so far. 
+        <br>  
+        This is my dog <a href="#"><strong>Mylie</strong><img src="mylie.jpg"></a>.</p>
         <br>
         <iframe src="https://giphy.com/embed/BBC1izoOkjXkjkohMY" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     </div>
