worked on title

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Brian Smith</title>
   </head>
   <body>
+    <div class="title">
+        <img style="float: center; margin: 0px -125px -45px 0px;" src="bear.png" alt="bear" padding="0" >
+    </div>
     <div class="divThree">
-        <img style="float: center; margin: 0px -200px -50px 0px;" src="bear.png" alt="bear" padding="0" >
-        <div class="divThree">
         <h1>Brian Smith</h1>
-      </div>
+    </div>
     </div>    
     <div class="topNav"> 
         <a href="https://www.linkedin.com/in/nimclick/">LinkedIn</a>
