made changes to links

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     </div>
     </div>    
     <div class="topNav"> 
-        <a href="https://www.linkedin.com/in/nimclick/">LinkedIn</a>
+      <ul>
+        <li>
+        <a href="https://www.linkedin.com/in/nimclick/" style="text-decoration:none;">LinkedIn</a>
         <a href="https://github.com/bsmitty815">GitHub</a>
-    </div>
+      </li>
+      </ul>
+      </div>
 </br>
     <div class="divOne">
         <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code with the help of The Flatiron School, SoloLearn, and some youtube videos I have made this site so far. 
