--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="topNav"> 
       <ul>
         <li>
-        <a href="https://www.linkedin.com/in/nimclick/" style="text-decoration:none;">LinkedIn</a>
-        <a href="https://github.com/bsmitty815">GitHub</a>
+        <a href="https://www.linkedin.com/in/nimclick/" >LinkedIn</a>
+        <a href="https://github.com/bsmitty815" >GitHub</a>
       </li>
       </ul>
       </div>
 </br>
     <div class="divOne">
-        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code with the help of The Flatiron School, SoloLearn, and some youtube videos I have made this site so far. 
+        <p>Hi, my name is Brian and welcome to my website. I am in the process of learning how to code with the help of The Flatiron School, SoloLearn, searching the internet, and some youtube videos I have made this site so far. 
         <br>  
         This is my dog <a href="#"><strong>Mylie</strong><img src="mylie.jpg"></a>.</p>
         <br>
